[gd_scene load_steps=2 format=3 uid="uid://b6uvmoplgx30l"]

[ext_resource type="Script" uid="uid://x7fqujshwhpa" path="res://ui/level_box.gd" id="1_dmvoq"]

[node name="LevelBox" type="Button"]
custom_minimum_size = Vector2(110, 110)
offset_right = 110.0
offset_bottom = 110.0
script = ExtResource("1_dmvoq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
offset_right = 110.0
offset_bottom = 110.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_top = 43.0
offset_right = 110.0
offset_bottom = 66.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 110.0
offset_bottom = 110.0

[node name="Lock" type="TextureRect" parent="MarginContainer"]
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
